[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/TransitionRect.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 802.0
custom_constants/separation = 20

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 100.0
rect_min_size = Vector2( 1280, 100 )
theme = ExtResource( 1 )
text = "Finn's Quest"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 1280.0
margin_bottom = 654.0
custom_constants/margin_top = 480

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
visible = false
margin_top = 480.0
margin_right = 1280.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 1 )
custom_constants/separation = 64
alignment = 1

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 308.0
margin_right = 608.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 0 )
text = "New Game"

[node name="Load Game" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 672.0
margin_right = 972.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 0 )
text = "Load Game"

[node name="MenuOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 480.0
margin_right = 1280.0
margin_bottom = 534.0
theme = ExtResource( 1 )
custom_constants/separation = 140
alignment = 1

[node name="NewGameLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/MenuOptions"]
margin_left = 346.0
margin_right = 562.0
margin_bottom = 54.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/MarginContainer2/MenuOptions/NewGameLabel"]
modulate = Color( 0.329412, 0.329412, 0.329412, 0.356863 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/MenuOptions"]
margin_left = 702.0
margin_right = 934.0
margin_bottom = 54.0
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/MarginContainer2/MenuOptions/LoadGameLabel"]
visible = false
modulate = Color( 0.329412, 0.329412, 0.329412, 0.356863 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 674.0
margin_right = 1280.0
margin_bottom = 768.0
custom_constants/margin_top = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 94.0
theme = ExtResource( 1 )
text = "Made by majormunky"
align = 1

[node name="TransitionRect" parent="." instance=ExtResource( 3 )]
visible = false
margin_right = 0.0
margin_bottom = 0.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Load Game" to="." method="_on_Load_Game_pressed"]
